test/error/Exptype.c1
void main() {
	int n = 0;
	n = (n + 1) * (n = 1);
	write(n);
	if ((n -= 1) == 0)
	    if (n = 0) { // error
		write(n == 0);
		write(n = 0);
	    }
	n = n * (n==0); // error
}